# Udemy_Course_Make_CMake

./: README.md
2_Makefile/1_HelloWorld/: Makefile  main
2_Makefile/3_CompilerFlags/: Makefile  main.cc  mainRelease  mylib.cc  mylib.h
2_Makefile/5_MakefileTemplate/: Makefile
2_Makefile/5_MakefileTemplate/src/: main.cc  mylib.cc
2_Makefile/6_BetterMakefileTemplate/: Makefile  sources.mk
2_Makefile/6_BetterMakefileTemplate/src/: main.cc
3_CMake/1_HelloWorld/: CMakeLists.txt
3_CMake/2_BASICPROJECT/: CMakeLists.txt
3_CMake/2_BASICPROJECT/src/my_lib/: mylib.cc
3_CMake/4_VARIABLESOPTIONS/: CMakeLists.txt  Makefile
3_CMake/4_VARIABLESOPTIONS/app/: Makefile  main.cc
3_CMake/4_VARIABLESOPTIONS/src/: CMakeLists.txt  Makefile
3_CMake/4_VARIABLESOPTIONS/src/my_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
